Updated featured section

--- a/index.html
+++ b/index.html
@@ -25,11 +25,69 @@
           </div>
         </div>
         <div class="banner-img">
-          <img src="assets/pngwing-10.png" alt="" />
+          <img src="assets/pngwing-10.png" alt="Tulip" />
         </div>
       </section>
     </header>
-    <main></main>
+    <main>
+      <!-- Featured Section Start -->
+      <section class="section-padding" id="featured-container">
+        <div class="container">
+          <div class="section-title">
+            <h2 class="title">Our Featured Flowers</h2>
+            <p class="sub-title">
+              It is a long established fact that a reader will be distracted by
+              the readable content of a page when looking at its layout.
+            </p>
+          </div>
+          <div class="featured-content">
+            <div class="featured-item">
+              <div class="featured-img-box box-1">
+                <img src="assets/pngwing-6.png" alt="Pink Flower" />
+              </div>
+              <a class="btn-bordered" href="#">Pink Flower Tree</a>
+            </div>
+            <div class="featured-item">
+              <div class="featured-img-box box-2">
+                <img src="assets/pngwing-5.png" alt="Red Flower" />
+              </div>
+              <a class="btn-bordered" href="#">Red Flower Tree</a>
+            </div>
+            <div class="featured-item">
+              <div class="featured-img-box box-3">
+                <img src="assets/pngwing-7.png" alt="Yellow Flower" />
+              </div>
+              <a class="btn-bordered" href="#">Yellow Flower Tree</a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Service Section Start -->
+      <section class="section-padding" id="services-container">
+        <div class="container services-content">
+          <div class="services-items">
+            <div class="service-item">
+              <div class="service-img">
+                <img src="assets/group-57.png" alt="" />
+              </div>
+              <p class="service-text">Same Day Delivery. Click & Collect.</p>
+            </div>
+            <div class="service-item">
+              <div class="service-img">
+                <img src="assets/group-58.png" alt="" />
+              </div>
+              <p class="service-text">Fresh Flowers. Local Growers.</p>
+            </div>
+            <div class="service-item">
+              <div class="service-img">
+                <img src="assets/group-59.png" alt="" />
+              </div>
+              <p class="service-text">24/7 Free Support.</p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
