Updated services section

--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
         </div>
       </section>
       <!-- Service Section Start -->
-      <section class="section-padding" id="services-container">
-        <div class="container services-content">
-          <div class="services-items">
+      <section class="section-padding pt-0" id="services-container">
+        <div class="container">
+          <div class="services-content">
             <div class="service-item">
               <div class="service-img">
                 <img src="assets/group-57.png" alt="" />
