Updated offer section

--- a/index.html
+++ b/index.html
@@ -87,6 +87,24 @@
           </div>
         </div>
       </section>
+      <!-- Available Offer Banner Section Start -->
+      <section class="section-padding" id="offer-container">
+        <div class="container">
+          <div class="offer-content">
+            <div class="offer-text">
+              <h2>Hot Deal ! Sale Up To 25% <span>Off</span></h2>
+              <p>
+                It is a long established fact that a reader will be distracted
+                by the readable content of a page when looking at its layout.
+              </p>
+              <a href="#"><button class="btn btn-primary">Sign Up</button></a>
+            </div>
+            <div class="offer-img">
+              <img src="assets/pngwing-8.png" alt="Rose bouquet" />
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
