Updated Instagram showcase section

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </div>
       </section>
       <!-- Available Offer Banner Section Start -->
-      <section class="section-padding" id="offer-container">
+      <section id="offer-container">
         <div class="container">
           <div class="offer-content">
             <div class="offer-text">
@@ -101,6 +101,32 @@
             </div>
             <div class="offer-img">
               <img src="assets/pngwing-8.png" alt="Rose bouquet" />
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Showcase Section Start -->
+      <section class="section-padding" id="showcase-container">
+        <div class="container">
+          <div class="section-title">
+            <h2 class="title">Instagram</h2>
+            <p class="sub-title">
+              It is a long established fact that a reader will be distracted by
+              the readable content of a page when looking at its layout.
+            </p>
+          </div>
+          <div class="showcase-content">
+            <div class="showcase-img">
+              <img src="assets/flower-01.png" alt="Instagram" />
+            </div>
+            <div class="showcase-img">
+              <img src="assets/rectangle-4.png" alt="Instagram" />
+            </div>
+            <div class="showcase-img">
+              <img src="assets/rectangle-5.png" alt="Instagram" />
+            </div>
+            <div class="showcase-img">
+              <img src="assets/rectangle-6.png" alt="Instagram" />
             </div>
           </div>
         </div>
