Updated call to action section

--- a/index.html
+++ b/index.html
@@ -131,7 +131,28 @@
           </div>
         </div>
       </section>
+      <!-- Call to Action Section Start -->
+      <section class="section-padding pt-0" id="cta-container">
+        <div class="container cta-content">
+          <div class="cta-text">
+            <h2>Get The Latest Deals</h2>
+            <p>$30 coupon for first shopping</p>
+          </div>
+          <div class="cta-form">
+            <form action="">
+              <input
+                type="email"
+                name="email"
+                id="email"
+                placeholder="Enter your email here...."
+              />
+              <button class="btn btn-primary">Subscribe</button>
+            </form>
+          </div>
+        </div>
+      </section>
     </main>
-    <footer></footer>
+    <!-- Footer Start -->
+    <footer class="section-padding"></footer>
   </body>
 </html>
