--- a/index.html
+++ b/index.html
@@ -153,6 +153,19 @@
       </section>
     </main>
     <!-- Footer Start -->
-    <footer class="section-padding"></footer>
+    <footer class="section-padding">
+      <div class="container text-center">
+        <div class="footer-content">
+          <h2 class="footer-title"><span>Flower</span>Shop</h2>
+          <p>
+            It is a long established fact that a reader will be distracted by
+            the readable content of a page when looking at its layout.
+          </p>
+          <p class="copyright">
+            @2020-2024, FlowerShop.com. All rights reserved.
+          </p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
